Added basic framework, question0

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,8 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p 
+    | At this website, you can iteract with my solutions to various
+    | problems found at 
+    a(href='http://projecteuler.net', target='new') Project Euler
+    | .  My specific focus will be pi-related problems.
