--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,10 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    hr
+    p
+      | Go to 
+      a(href='/euler') problem set
+    p
+      | The code for this website can be found at 
+      a(href='http://github.com/achoi007/ProjectEulerPi', target='new') github
